Made own members and permission groups work.
Signed-off-by: Ivo Quiring <falk.quiring@gmail.com>